# navi-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.development.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.staging.yml  manage.py  merge_development_dotenvs_in_dotenv.py  merge_staging_dotenvs_in_dotenvs.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-ghcr.yml  deploy.yml  main.yml  release-staging.yml  staging-deploy-ghcr.yml
compose/development/django/: Dockerfile
compose/development/nginx/: Dockerfile
compose/development/postgres/: Dockerfile
compose/development/traefik/: Dockerfile  traefik.yml
compose/local/django/: Dockerfile  start
compose/local/docs/: start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/traefik/: traefik.yml
compose/staging/django/: Dockerfile  entrypoint  start
config/: api_router.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev_compilation.py  development.py  local.py  production.py  staging.py  test.py
docs/: Makefile  conf.py  howto.rst  make.bat
env_merger/: merge_local_dotenvs_in_dotenvs.py  merge_production_dotenvs_in_dotenv.py  merge_staging_dotenvs_in_dotenvs.py
locale/fr_FR/LC_MESSAGES/: django.po
mysite/: settings.py
navi-backend/: .gitignore
navi_backend/: README.md  conftest.py
navi_backend/config/: api_router.py
navi_backend/config/settings/: base.py  local.py
navi_backend/core/: __init__.py  admin.py  apps.py  authentication.py  base_service.py  context_processors.py  exceptions.py  models.py  pagination.py  permissions.py  validators.py
navi_backend/core/api/: __init__.py  serializers.py  views.py
navi_backend/core/helpers/: geo_cache.py
navi_backend/core/logging/: context.py
navi_backend/core/middleware/: request_logger_middleware.py
navi_backend/core/tests/: factories.py
navi_backend/devices/: admin.py  apps.py  models.py
navi_backend/devices/api/: serializers.py  views.py
navi_backend/devices/migrations/: 0001_initial.py  0002_initial.py  0003_alter_espressomachine_last_modified_user_agent_and_more.py  0004_naviport_latitude_naviport_longitude.py  0005_naviport_address_line_1_naviport_address_line_2_and_more.py  0006_naviport_country.py  0007_alter_espressomachine_status_and_more.py  0008_alter_espressomachine_status_and_more.py
navi_backend/devices/tests/: conftest.py  factories.py  test_models.py
navi_backend/docs/: index.rst  users.rst
navi_backend/fakeapi/: admin.py  apps.py  models.py  urls.py  views.py
navi_backend/fakeapi/api/: serializers.py  views.py
navi_backend/fakeapi/migrations/: 0001_initial.py
navi_backend/menu/: admin.py  apps.py  managers.py  models.py
navi_backend/menu/api/: serializers.py  views.py
navi_backend/menu/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_last_modified_user_agent_and_more.py  0004_customizationgroup_maximum_allowed_and_more.py  0005_remove_menuitem_menu_menuit_name_138666_idx_and_more.py  0006_alter_category_status_alter_customization_status_and_more.py
navi_backend/menu/tests/: conftest.py  factories.py  test_models.py
navi_backend/navi_backend/templates/: base.html
navi_backend/navi_backend/users/: adapters.py  models.py  views.py
navi_backend/notifications/: admin.py  apps.py  models.py  tasks.py
navi_backend/notifications/api/: serializers.py  views.py
navi_backend/notifications/migrations/: 0001_initial.py  0002_textlog_rename_reciever_emaillog_recipient_and_more.py  0003_emaillog_is_sent_textlog_is_sent.py  0004_alter_emaillog_error_alter_emaillog_reason_and_more.py
navi_backend/orders/: admin.py  apps.py  managers.py  model_changes.txt  models.py  tasks.py
navi_backend/payments/: apps.py  models.py  services.py
navi_backend/templates/: base.html
navi_backend/users/: admin.py  apps.py  forms.py  jwt.py  managers.py  models.py  signals.py
requirements/: base.txt  development.txt  local.txt  production.txt  staging.txt
(+85 files in other folders)
