[project]
name = "navi-backend"
version = "0.0.0"
requires-python = "==3.14.*"
dependencies = [
  "argon2-cffi==23.1.0",
  "celery>=5.2.7",
  "coverage==7.6.10",
  "crispy-bootstrap5==2025.6",
  "debugpy==1.8.19",
  "django==5.2.7",
  "django-allauth[mfa]==65.13.1",
  "django-anymail[mailgun]==12.0",
  "django-celery-beat==2.8.1",
  "django-cors-headers==4.6.0",
  "django-coverage-plugin==3.1.0",
  "django-crispy-forms==2.3",
  "django-debug-toolbar==6.0.0",
  "django-environ==0.12.0",
  "django-extensions==3.2.3",
  "django-imagekit==5.0.0",
  "django-model-utils==5.0.0",
  "django-redis==5.4.0",
  "django-storages[s3]==1.14.4",
  "django-stubs[compatible-mypy]==5.2.8",
  "djangorestframework==3.15.2",
  "djangorestframework-simplejwt==5.3.1",
  "djangorestframework-stubs==3.16.5",
  "djlint==1.36.4",
  "drf-spectacular==0.28.0",
  "factory-boy==3.3.1",
  "fido2==2.0.0",
  "flower>=1.2.0",
  "gunicorn==23.0.0",
  "hiredis==3.1.0",
  "ipdb==0.13.13",
  "mypy==1.19.1",
  "pillow==12.0.0",
  "pre-commit==4.0.1",
  "psycopg[c]==3.2.3",
  "pytest==8.3.4",
  "pytest-django==4.9.0",
  "pytest-sugar==1.0.0",
  "python-slugify==8.0.4",
  "redis==5.2.1",
  "ruff==0.14.2",
  "sphinx==8.1.3",
  "sphinx-autobuild==2024.10.3",
  "stripe>=12.0.0",
  "weasyprint>=68.1",
  "werkzeug[watchdog]==3.1.3",
  "whitenoise==6.11.0",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["navi_backend/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py313"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",

]

[tool.ruff.per-file-ignores]
"config/wsgi.py" = ["ERA001"]
"manage.py" = ["TRY003"]
"*/apps.py" = ["PLC0415"]
"*/tests/*" = ["PLR2004"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "COM812",
  "ISC001",
  "TRY301", # Abstract `raise` to an inner function
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true
